# gpu-algorithms-optimization

./: .gitignore  .gitmodules  README.md
algorithms/: .clang-format  CMakeLists.txt  README.md
algorithms/algorithms/: CMakeLists.txt
algorithms/algorithms/include/algorithms/: logistical_regression.hpp
algorithms/algorithms/include/algorithms/maths/: functions.hpp  operations.hpp  types.hpp
algorithms/algorithms/src/: logistical_regression.cpp
algorithms/benchmark/: CMakeLists.txt
algorithms/benchmark/src/: main.cpp
algorithms/samples/: CMakeLists.txt
algorithms/samples/logistical_regression/: CMakeLists.txt  README.md
algorithms/samples/logistical_regression/src/: main.cpp
algorithms/tests/: CMakeLists.txt
algorithms/tests/math/: CMakeLists.txt  operations.cpp
algorithms/utils/: CMakeLists.txt
algorithms/utils/include/utils/: dataset.hpp
algorithms/utils/src/: dataset.cpp
benchmarking/: README.md  config.sample.yml  run_benchmark.py
benchmarking/bench/: common.py
benchmarking/bench/common/: argparser.py  cuda.py  dataset.py  timer.py  utils.py
benchmarking/bench/microsoft/: lightgbm.py
benchmarking/bench/rapids/: kmeans.py  logistic_regression.py  naive_bayes.py  pca.py  random_forest.py  truncated_svd.py
benchmarking/bench/scikit/: logistic_regression.py  random_forest.py
benchmarking/bench/spark/: als.py  kmeans.py  logistic_regression.py  naive_bayes.py  pca.py  random_forest.py
benchmarking/scripts/: common.sh
benchmarking/tools/: arff_to_npy.py  generate_launch_script.sh  run_all.sh  svm_to_npy.py
docs/: README.md
docs/benchmarking/: README.md  running-benchmarks.md  tools-overview.md  using-launch-scripts.md
docs/installation/components/: catboost.md  cuml.md  rapids.md
docs/installation/tools/: cmake.md  cudf.md  gcc.md  git.md  miniconda.md
docs/setup/: gpu-node.md
patches/lightgbm/: use-sp-float.patch
